Added smooth scrolling
Applied the 'scroll-behaviour: smooth' property to the 'html' selector.

--- a/index.css
+++ b/index.css
@@ -21,6 +21,10 @@
   outline: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: var(--bodyBackground);
   background-image: url('background.png');
